--- a/sections/c.back/d.prototype.tex
+++ b/sections/c.back/d.prototype.tex
@@ -46,7 +46,7 @@ To simply use the applications that were also used for the evaluation in this th
     \item \inlinecode{BenchCache} \enspace Is a utility application used for the evaluation of the cache effectiveness. It is not intended to be used by an end user.
     \item \inlinecode{Benchmark} \enspace Is another utility for benchmarking the performance of the axiom weakening implementation.
     \item \inlinecode{CheckConsistency} \enspace Is an application to test the consistency of an ontology, possibly using multiple different reasoner implementations.
-    \item \inlinecode{ClassifyOntology} \enspace Can be used to determine whether an ontology fits into a certain OWL 2 profile. Further, it also shows how expressive the Description Logic features used are.
+    \item \inlinecode{ClassifyOntology} \enspace Can be used to determine whether an ontology fits into a certain OWL 2 profile. Further, it also shows how expressive the description logic features used are.
     \item \inlinecode{CleanupOntology} \enspace This application was used for the evaluation to apply normalization and remove axioms violating the OWL 2 DL profile.
     \item \inlinecode{EvaluateRepairs} \enspace Can be used to compute the size of the inferred class hierarchy and the IIC between different ontologies.
     \item \inlinecode{MakeInconsistent} \enspace Can be used to make a consistent ontology inconsistent by adding stronger versions of the axioms until they cause inconsistency.
